--- a/src/example/style.less
+++ b/src/example/style.less
@@ -9,6 +9,9 @@ body {
 section {
   padding: 10px;
   background: #eaeaea;
+  overflow: hidden;
+  transition: all .3s ease;
+
   >p:first-child {
     font-size: 1.5em;
     margin: 0.2em auto;
