--- a/src/modal/index.less
+++ b/src/modal/index.less
@@ -59,7 +59,12 @@
     position: absolute;
     width: 12%;
     top: 0;
-    right: 0;cursor: pointer;
+    right: 0;
+    cursor: pointer;
+    max-width: 35px;
+    > * {
+      cursor: inherit;
+    }
 
   }
 
