--- a/src/button/index.less
+++ b/src/button/index.less
@@ -10,11 +10,12 @@
   box-shadow: none;
   transition: all 0.3s ease;
   font-size: 14px;
+  border: 1px solid var(--main_border_color);
 
   &:focus {
-    border: none;
+    // border: none;
     outline: none;
-    box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.3);
   }
 
   &::before {
