--- a/src/input/index.less
+++ b/src/input/index.less
@@ -19,8 +19,9 @@
   >input {
     vertical-align: bottom;
     border: none;
-    height: 1.5em;
+    // height: 1.5em;
     padding: 0.3em;
+    font-size: 16px;
 
     &:focus,
     &:active {
