--- a/src/button/index.less
+++ b/src/button/index.less
@@ -1,6 +1,6 @@
 .ub-button {
   height: 28px;
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   border: none;
