--- a/src/input/index.less
+++ b/src/input/index.less
@@ -7,8 +7,11 @@
   display: inline-flex;
   align-items: center;
   background: #fff;
+  padding-left: 0.5em;
+  // width: 100%;
+
   >:first-child:not(input) {
-  //  height: 1.5em;
+    //  height: 1.5em;
   }
 
   &.focus {
@@ -21,7 +24,8 @@
     border: none;
     // height: 1.5em;
     padding: 0.3em;
-    font-size: 16px;
+    // font-size: 16px;
+    width: 100%;
 
     &:focus,
     &:active {
