add modal.confirm method

--- a/src/tip/index.less
+++ b/src/tip/index.less
@@ -16,7 +16,7 @@
   >span {
     // z-index: 99;
     // text-align: left;
-    @parent-width: 20px;
+    @parent-width: 1.25em;
     position: absolute;
     background: lightyellow;
     color: darkblue;
