--- a/src/input/index.less
+++ b/src/input/index.less
@@ -2,11 +2,13 @@
   box-shadow: none;
   transition: all 0.3s ease;
   border-radius: 2px;
-  display: inline-block;
+  // display: inline-block;
   border: 1px solid rgba(0, 0, 0, 0.3);
   display: inline-flex;
+  align-items: flex-end;
   align-items: center;
   background: #fff;
+  padding: 1px;
   // padding-left: 0.5em;
   // width: 100%;
 
@@ -16,12 +18,13 @@
 
   &.focus {
 
-    box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 0px 2px rgba(174, 238, 249, 0.5);
   }
 
-  >input {
+  >input,
+  >textarea {
     vertical-align: bottom;
-    border: none;
+    border-color: transparent;
     // height: 1.5em;
     padding: 0.3em;
     // font-size: 16px;
@@ -36,4 +39,5 @@
       background: #eaeaea;
     }
   }
+
 }
