--- a/src/modal/index.less
+++ b/src/modal/index.less
@@ -38,11 +38,13 @@
     box-sizing: border-box;
     width: 80vw;
     // height: 80vw;
-    padding: 5vw;
+    padding: 20px;
     background: #ffffff;
     max-height: 60vh;
     overflow-y: scroll;
     position: relative;
+    border-radius: 6px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.4);
   }
 
   >div.loading-modal {
