--- a/src/button/index.less
+++ b/src/button/index.less
@@ -18,22 +18,22 @@
     box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.3);
   }
 
-  &::before {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-    background: black;
-    transition: all .3s ease;
-  }
+  // &::before {
+  //   content: '';
+  //   display: block;
+  //   width: 100%;
+  //   height: 100%;
+  //   position: absolute;
+  //   left: 0;
+  //   top: 0;
+  //   opacity: 0;
+  //   background: black;
+  //   transition: all .3s ease;
+  // }
 
-  &:active::before {
-    opacity: 0.1;
-  }
+  // &:active::before {
+  //   opacity: 0.1;
+  // }
 
   .ub-logo-loading {
     width: 0;
